--- a/app/views/adresses/_form.html.erb
+++ b/app/views/adresses/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :vorname %>
   </div>
   <div class="field">
-    <%= f.label :nachname %><br>
-    <%= f.text_field :nachname %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
     <%= f.label :street %><br>
