--- a/app/views/adresses/index.html.erb
+++ b/app/views/adresses/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Vorname</th>
-      <th>Nachname</th>
+      <th>Name</th>
       <th>Street</th>
       <th>Plz</th>
       <th>City</th>
@@ -19,7 +19,7 @@
     <% @adresses.each do |adress| %>
       <tr>
         <td><%= adress.vorname %></td>
-        <td><%= adress.nachname %></td>
+        <td><%= adress.name %></td>
         <td><%= adress.street %></td>
         <td><%= adress.plz %></td>
         <td><%= adress.city %></td>
