--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,6 +19,15 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+   <div class="field">
+    <%= f.label :date_created %><br>
+    <%= f.text_field :date_created %>
+  </div>
+   <div class="field">
+    <%= f.label :date_updated %><br>
+    <%= f.text_field :date_updated %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
