--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,8 @@
     <tr>
       <th>Email</th>
       <th>Name</th>
+       <th>Date Created</th>
+      <th>Date Updated</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +18,8 @@
       <tr>
         <td><%= user.email %></td>
         <td><%= user.name %></td>
+        <td><%= user.date_created %></td>
+        <td><%= user.date_updated %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
