--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Home") %>
 
 <div class="center jumbotron">
-  <h1>Sandpit HOME</h1>
+  <h1>SANDPIT Home</h1>
 
   <h2>
     This is the home page for the
@@ -9,7 +9,7 @@
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
