--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -140,13 +140,30 @@ input {
     color: $state-danger-text;
   }
 }
+
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
+
+
 /* sidebar */
 
 aside {
   section.user_info {
     margin-top: 20px;
   }
-  section {
+ 
+ section {
     padding: 10px 0;
     margin-top: 20px;
     &:first-child {
